# pcds-python-migration-tools

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.rst  add_codeowners.py  branch_protection.graphql  detravisify.py  gha_template.yml  helpers.py  migrate_single_twincat.sh  pyproject.toml  python_gha_template.yml  requirements.txt  setup-to-pyproject.py  setup_to_pyproject.py  switch_gha_to_sha.py  twincat_gha_template.yml  update_branch_protection.py  update_branch_protection.sh  update_branch_protections.py  update_github_settings.py  update_python_repository.py  update_repo_properties.py  update_repository.py  update_repository_settings.py  update_twincat_repository.py
graphql/: branch_protection.graphql  repository_info.graphql
templates/codeowners/: DEFAULT_CODEOWNER
templates/twincat/: README.md  migration_pr.md
