[project]
name = "pcds-python-migration-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apischema>=0.19.0",
    "black>=26.5.1",
    "ghapi>=1.0.13",
    "jinja2>=3.1.6",
    "pre-commit>=4.6.0",
    "pycln>=2.6.0",
    "pyupgrade>=3.21.2",
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[tool.uv]
exclude-newer = "7 days"
